# CocktailApp

./: .gitignore  README.md  pyproject.toml
cocktailapp/: __main__.py  apptypes.py  constants.py  core.py
cocktailapp/interface/: cli.py
cocktailapp/lookup/: ingredient_match.py  query.py
tests/: README.md
tests/interface/: cli.py
