[tool.poetry]
name = "unaitask"
version = "0.1.0"
description = ""
authors = ["jmalek <jan.malek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
